<resources>
    <string name="default_web_client_id" translatable="false">webClientId.apps.googleusercontent.com</string>
    <string name="app_name">Controle de notificações</string>
    <string name="O_nome_n_o_pode_ficar_em_branco">O nome não pode ficar em branco.</string>
    <string name="O_nome_deve_ter_entre_e_caracteres">O nome deve ter entre %1$d e %2$d caracteres.</string>
    <string name="Permite_mostrar_as_notifica_es_nos_dias_e_horarios_selecionados">As notificações serão exibidas apenas nos dias e horários selecionados.</string>
    <string name="Permissiva">Permissiva</string>
    <string name="Tipo_de_regra">Tipo de regra</string>
    <string name="Restritiva">Restritiva</string>
    <string name="Segunda">Segunda</string>
    <string name="Terca">Terça</string>
    <string name="Quarta">Quarta</string>
    <string name="Quinta">Quinta</string>
    <string name="Sexta">Sexta</string>
    <string name="Sabado">Sábado</string>
    <string name="Domingo">Domingo</string>
    <string name="Dias_da_semana">Dias da semana</string>
    <string name="Remover">Remover</string>
    <string name="Horarios">Horários</string>
    <string name="De">De</string>
    <string name="_08_30">08:30</string>
    <string name="_11_30">11:30</string>
    <string name="as">às</string>
    <string name="Bot_o_para_remover_o_intervalo_de_tempo">Remover o intervalo de tempo</string>
    <string name="As_notifica_es_ser_o_bloqueadas_nos_dias_e_hor_rios_selecionados">As notificações serão bloqueadas nos dias e horários selecionados.</string>
    <string name="Selecione_o_fim_do_intervalo_de_tempo">Selecione o fim do intervalo de tempo</string>
    <string name="Selecione_o_in_cio_do_intervalo_de_tempo">Selecione o início do intervalo de tempo</string>
    <string name="format_time">%1$s:%2$s</string>
    <string name="O_intervalo_selecionado_era_inv_lido">O intervalo selecionado era inválido</string>
    <string name="O_limite_m_ximo_de_intervalos_de_tempo_foi_atingido">O limite máximo de intervalos de tempo (%1$d) foi atingido.</string>
    <string name="Nome_da_regra_opcional">Nome da regra (opcional)</string>
    <string name="Bot_o_de_adicionar_regra">Adicionar regra</string>
    <string name="Adicionar">Adicionar</string>
    <string name="Intervalos_de_tempo">Intervalos de tempo</string>
    <string name="segunda_abrev">Seg</string>
    <string name="terca_abrev">Ter</string>
    <string name="quarta_abrev">Qua</string>
    <string name="quinta_abrev">Qui</string>
    <string name="sexta_abrev">Sex</string>
    <string name="sabado_abrev">Sáb</string>
    <string name="domingo_abrev">Dom</string>
    <string name="regra_tipo_permissiva">Perm.</string>
    <string name="regra_tipo_restritiva">Bloq.</string>
    <string name="Nome_da_regra">Nome da regra</string>
    <string name="Nome_padrao_de_regra">%1$s %2$s %3$s</string>
    <string name="Nao_e_possivel_adicionar_um_intervalo_de_tempo_duplicado">Não é possível adicionar um intervalo de tempo duplicado</string>
    <string name="Nao_sao_permitidos_intervalos_de_tempo_que_se_interseccionam">"Não são permitidos intervalos de tempo que se sobrepõem. "</string>
    <string name="Selecione_pelo_menos_um_dia_da_semana">Selecione pelo menos um dia da semana</string>
    <string name="Adicionar_regra">Adicionar regra</string>
    <string name="adicione_pelo_menos_um_intervalo_de_tempo">Adicione pelo menos um intervalo de tempo</string>
    <string name="Aplicativos_alvo">Aplicativos alvo</string>
    <string name="Selecionar">Selecionar</string>
    <string name="Regra">Regra</string>
    <string name="Buscar_aplicativo">Buscar aplicativo</string>
    <string name="Concluir">Concluir</string>
    <string name="Gerenciar_aplicativos">Gerenciar aplicativos</string>
    <string name="Selecione_pelo_menos_um_aplicativo">Selecione pelo menos um aplicativo</string>
    <string name="Selecionar_aplicativos">Selecionar aplicativos</string>
    <string name="O_final_do_intervalo_deve_ser_maior_que_o_inicio">O final do intervalo deve ser maior que o inicio</string>
    <string name="Nao_possivel_selecionar_mais_que_x_aplicativos">Não é possível selecionar mais que %1$d aplicativos</string>
    <string name="Lista_de_aplicativos_instalados_no_dispositivo">Lista de aplicativos instalados no dispositivo.</string>
    <string name="Lista_de_aplicativos_sendo_gerenciados">Lista de aplicativos sendo gerenciados.</string>
    <string name="Selecionar_todos">Selecionar todos</string>
    <string name="Inverter_sele_o">Inverter seleção</string>
    <string name="Desselecionar_todos">Desselecionar todos</string>
    <string name="Icone_do_aplicativo">Ícone do aplicativo</string>
    <string name="Icone_do_intervalo_de_tempo">Ícone do intervalo de tempo</string>
    <string name="Bot_o_de_menu">Menu</string>
    <string name="Selecionar_regra">Selecionar regra</string>
    <string name="Icone_da_regra">Icone da regra</string>
    <string name="Botao_para_editar_a_regra">Editar a regra</string>
    <string name="Botao_de_menu_da_regra">Menu da regra</string>
    <string name="Editar_regra">Editar regra</string>
    <string name="Remover_regra">Remover regra</string>
    <string name="Por_favor_confirme">Por favor, confirme:</string>
    <string name="Deseja_mesmo_remover_a_regra_essa_a_o_n_o_poder_ser_desfeita">Deseja mesmo remover a regra \"%1$s\" ?\n\nEssa ação não poderá ser desfeita</string>
    <string name="Hhouve_um_erro_ao_remover_a_regra_tente_novamente">Houve um erro ao remover a regra, tente novamente</string>
    <string name="Selecione_uma_regra">Selecione uma regra</string>
    <string name="Caixa_de_sele_o_para_o_aplicativo">Caixa de seleção para o aplicativo</string>
    <string name="Bot_o_para_abrir_a_tela_de_visualizacao">Abrir a tela de visualização</string>
    <string name="App_nao_encontrado">App não encontrado</string>
    <string name="Botao_de_adicionar_novo_app_gerenciado">Adicionar novo app gerenciado</string>
    <string name="Foto_de_perfil_do_usuario">Foto de perfil do usuário\n</string>
    <string name="Tentar_novamente">Tentar novamente</string>
    <string name="Hamaisdeumprocessodeloginemandamentoquantas">Há mais de um processo de login em andamento. Quantas vezes você apertou esse botão?</string>
    <string name="Houveumerroaoautenticarsuacontatente">Houve um erro ao autenticar sua conta, tente novamente. Causa: {0}</string>
    <string name="BemvindoX">Bem-vindo(a) %1$s</string>
    <string name="Ologinfalhou">O login falhou. Código: %1$d \nMensagem: %2$s</string>
    <string name="Houveumerroaocontactaraapidogoole">Houve um erro ao contactar a API do Google, verifique sua conexão e tente reiniciar o app. Código: {%1$d}</string>
    <string name="O_login_falhou_por_um_erro_de_desenvolvimento_da_aplica_o_contate_o_desenvolvedor_c_digo_de_erro_1_mensagem_2">O login falhou por um erro de desenvolvimento da aplicação, contate o desenvolvedor. Código de erro:%1$d \nMensagem: %2$s</string>
    <string name="O_login_falhou_por_um_erro_no_provedor_de_login">O login falhou por um erro no provedor de login, tente novamente mais tarde. Código de erro: %1$d \nMensagem: %2$s</string>
    <string name="Vocenaoestaconectadoainternetouadata">Você não está conectado à internet ou a data do dispositivo está incorreta</string>
    <string name="Bom_dia">Bom dia</string>
    <string name="Boa_tarde">Boa tarde</string>
    <string name="Boa_noite">Boa noite</string>
    <string name="Sua_conta">Sua conta</string>
    <string name="Sair">Sair</string>
    <string name="Perfil">Perfil</string>
    <string name="Voce_sera_desconectado_a_e_todos_os_dados_locais_ser_o_removidos_deseja_mesmo_continuar">Você será desconectado(a) e todos os dados locais serão removidos, deseja mesmo continuar?</string>
    <string name="Houve_um_erro_ao_desconectar_a_conta_tente_novamente">Houve um erro ao desconectar a conta. Tente novamente</string>
    <string name="voce_n_o_est_conectado_internet">Você não está conectado à internet.</string>
    <string name="Erro_de_desenvolvimento_c_digo">Erro de desenvolvimento: Código %1$d - %2$s</string>
    <string name="Erro_no_provedor_c_digo">Erro no provedor: Código %1$d - %2$s</string>
    <string name="O_login_falhou_c_digo_0_mensagem_1">O login falhou: Código %1$s, Mensagem %2$s</string>
    <string name="Voce_cancelou_o_login">Você cancelou o login.</string>
    <string name="Bem_vindo_a">Bem Vindo(a)</string>
    <string name="Splash_fragment">Splash fragment</string>
    <string name="Dica">Dica</string>
    <string name="Entendi">Entendi</string>
    <string name="Lembre_me_da_proxima_vez">Lembre-me da próxima vez</string>
    <string name="Editar_uma_regra_faz_com_que_as_altera_es_feitas_se_apliquem_a_todos_os_aplicativos">Editar uma regra faz com que as alterações feitas se apliquem a todos os aplicativos gerenciados por ela. Se você quiser alterar as restrições de um único aplicativo, crie uma regra específica apenas para ele.</string>
    <string name="Botao_de_voltar">Voltar</string>
    <string name="Remover_app">Remover app</string>
    <string name="Limpar_historico">Limpar histórico</string>
    <string name="Regras">Regras</string>
    <string name="Deseja_mesmo_remover_este_aplicativo_da_lista_de_gerenciamento">Deseja mesmo remover este aplicativo da lista de gerenciamento?\n\nNota: Isso não removerá a regra.</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Ao_remover_um_regra_todos_os_aplicativos_gerenciados">Ao remover um regra, todos os aplicativos gerenciados por ela assim como os seus históricos de notificação também são removidos.\n\nDeseja mesmo remover esta regra?</string>
    <string name="Regra_nao_encontrada">Regra não encontrada</string>
    <string name="Gerenciando_notificacoes">Gerenciando notificações</string>
    <string name="Permissao_necessaria">Permissão necessária</string>
    <string name="Para_que_esse_aplicativo_possa_desempenhar_sua_fun_o_necess_rio_que_voc_forne_a_permiss_o_para_acesso_">Para que seja possível gerenciar as notificações, é necessário que você forneça a permissão: \"Acesso às notificações.\"</string>
    <string name="Permitir">Permitir</string>
    <string name="Permita_que_x_acesse_as_notificacoes">Permita que %1$s acesse as notificações</string>
    <string name="Monitoramento_de_notificacoes">Monitorando notificações</string>
    <string name="Toque_aqui_para_desativar_esta_notifica_o">Toque aqui para desativar esta notificação</string>
    <string name="Desativar">Desativar</string>
    <string name="Fazer_login">Fazer login</string>
    <string name="Bem_vindo_entre_com_sua_conta_google_para_continuar">Bem-Vindo!\n\nEntre com sua conta Google para continuar.</string>
    <string name="Seus_dados_s_o_usados_apenas_para_personalizar_a_interface_e_nunca_saem_do_seu_dispositivo">Não coletamos seus dados. Eles serão usados apenas para personalizar a interface.</string>
    <string name="Abrir_app">Abrir app</string>
    <string name="Historico_de_notifica_es_do_aplicativo">Histórico de notificações do aplicativo</string>
    <string name="As_notifica_es_bloqueadas_deste_app_aparecer_o_aqui">As notificações bloqueadas deste aplicativo aparecerão aqui</string>
    <string name="Finalizar">Finalizar</string>
    <string name="Desligar_echo">Desligar Echo</string>
    <string name="Apenas_se">Apenas se</string>
    <string name="Exceto_se">Exceto se</string>
    <string name="Tipo_de_condicao">Tipo de condição</string>
    <string name="Titulo">Título</string>
    <string name="conteudo">Conteúdo</string>
    <string name="Ambos">Ambos</string>
    <string name="Considerar_mai_sculas_e_min_sculas">Considerar maiúsculas e minúsculas</string>
    <string name="Palavras_chave">Palavras-chave</string>
    <string name="Separe_os_termos_com_v_rgula">Separe os termos com vírgula.</string>
    <string name="Campo_aplicavel">Campo aplicável</string>
    <string name="O_echo_est_ligado">O Echo está ligado!</string>
</resources>