<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:background="?attr/AppColorBackground"
    tools:context=".presentation.ui.fragments.add_update_condition.AddOrUpdateConditionFragment">

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/Concluir"
        android:transitionName="fab"
        app:icon="@drawable/vec_check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <include
        android:id="@+id/actionbar"
        layout="@layout/view_activity_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView

        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="@dimen/tablet_layout_max_width"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionbar">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="80dp"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/actionbar">

            <LinearLayout
                style="@style/containers_margins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:background="@drawable/back_container"
                android:orientation="vertical"
                android:transitionName="ll_condition_type_parent">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/urbanist_extrabold"
                    android:text="@string/Tipo_de_condicao"
                    android:textSize="20sp"
                    android:transitionName="tv_condition_type" />

                <!--https://github.com/material-components/material-components-android/blob/master/docs/components/Button.md#toggle-button-->
                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/mbt_type_condition"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    app:selectionRequired="true"
                    app:singleSelection="true">

                    <Button
                        android:id="@+id/btn_only_if"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Apenas_se" />

                    <Button
                        android:id="@+id/btn_except_if"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Exceto_se" />

                </com.google.android.material.button.MaterialButtonToggleGroup>


            </LinearLayout>

            <LinearLayout
                style="@style/containers_margins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:background="@drawable/back_container"
                android:orientation="vertical"
                android:transitionName="ll_field_parent">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/urbanist_extrabold"
                    android:text="@string/Campo_aplicavel"
                    android:textSize="20sp"
                    android:transitionName="tv_notification_field" />

                <!--https://github.com/material-components/material-components-android/blob/master/docs/components/Button.md#toggle-button-->
                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/mbt_field"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    app:selectionRequired="true"
                    app:singleSelection="true">

                    <Button
                        android:id="@+id/btn_title"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Titulo" />

                    <Button
                        android:id="@+id/btn_content"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/conteudo" />

                    <Button
                        android:id="@+id/btn_both"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Ambos" />

                </com.google.android.material.button.MaterialButtonToggleGroup>

            </LinearLayout>

            <LinearLayout
                style="@style/containers_margins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:background="@drawable/back_container"
                android:orientation="vertical"
                android:transitionName="ll_ignore_case">


                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/sw_case"
                    style="@style/Widget.Material3.CompoundButton.Switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/Considerar_mai_sculas_e_min_sculas" />


            </LinearLayout>

            <LinearLayout
                style="@style/containers_margins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:background="@drawable/back_container"
                android:orientation="vertical"
                android:transitionName="ll_keywords_parent">


                <TextView
                    android:id="@+id/tv_rule_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/urbanist_extrabold"
                    android:text="@string/Palavras_chave"
                    android:textSize="20sp"
                    android:transitionName="tv_rule_tittle" />


                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group_keywords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:animateLayoutChanges="true"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="8dp" />

                <EditText
                    android:id="@+id/edt_keywords"
                    style="@style/containers_margins"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="name"
                    android:background="@drawable/back_edittext"
                    android:hint="@string/Separe_os_termos_com_v_rgula"
                    android:inputType="textAutoComplete"
                    android:padding="12dp" />


            </LinearLayout>

            <TextView
                android:id="@+id/tv_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:transitionName="tv_summary"
                android:layout_marginBottom="16dp"
                android:drawablePadding="8dp"
                tools:text="Bloquear/permitir notificações apenas se titulo contiver match1, match2 ou match3"
                app:drawableStartCompat="@drawable/vec_condition"
                app:drawableTint="?attr/colorPrimary" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
