<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:background="?attr/AppColorBackground">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_view"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="empty_notification_list.json"
        app:lottie_repeatCount="0"
        app:lottie_repeatMode="restart" />


    <TextView
        android:id="@+id/tv_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:fontFamily="@font/urbanist_extrabold"
        android:maxWidth="250dp"
        android:textColor="?colorSecondary"
        android:text="@string/As_notifica_es_bloqueadas_deste_app_aparecer_o_aqui"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/lottie_view" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_go_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/Botao_de_voltar"
        android:padding="14dp"
        android:src="@drawable/vec_go_back"
        android:tint="?colorOnBackground"
        app:layout_constraintBottom_toBottomOf="@id/iv_app_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_app_icon" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_app_icon"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/Icone_do_aplicativo"
        android:elevation="5dp"
        android:transitionName="view_app_icon"
        app:layout_constraintStart_toEndOf="@id/iv_go_back"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/vec_rule_restrictive_small" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="6dp"
        android:elevation="19dp"
        android:ellipsize="marquee"
        android:fontFamily="@font/urbanist_extrabold"
        android:maxLines="1"
        android:paddingEnd="16dp"
        android:textSize="20sp"
        android:transitionName="view_app_name"
        app:layout_constraintEnd_toStartOf="@id/iv_menu"
        app:layout_constraintStart_toEndOf="@id/iv_app_icon"
        app:layout_constraintTop_toTopOf="@id/iv_app_icon"
        tools:ignore="RtlSymmetry"
        tools:text="Lembrete de remédios" />


    <TextView
        android:id="@+id/tv_rule_name"
        android:layout_width="0dp"
        android:ellipsize="end"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:maxLines="3"
        android:paddingTop="4dp"
        android:paddingEnd="4dp"
        android:textAlignment="gravity"
        android:textSize="12sp"
        android:transitionName="view_rule_name"
        app:drawableStartCompat="@drawable/vec_rule_permissive"
        app:drawableTint="?colorPrimary"
        app:layout_constraintEnd_toStartOf="@id/iv_menu"
        app:layout_constraintStart_toStartOf="@id/tv_app_name"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name"
        tools:ignore="RtlSymmetry"
        tools:text="Bloq. Seg-Sex. 08:00 as 18:00\nnefffffffffffffffffffffffffffffffffffffffffffffffffffffs\nefffffffffffffffffffffffffffffffffffffffffffffffffffff" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_menu"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/Bot_o_de_menu"
        android:elevation="5dp"
        android:padding="12dp"
        android:src="@drawable/vec_menu"
        android:transitionName="view_menu"
        app:layout_constraintBottom_toBottomOf="@id/iv_go_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_go_back"
        app:tint="?colorOnBackground" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        android:transitionName="divider"
        app:layout_constraintTop_toBottomOf="@id/tv_rule_name" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_open_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/Abrir_app"
        android:transitionName="fab"
        app:icon="@drawable/vec_open_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHistory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/Historico_de_notifica_es_do_aplicativo"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        android:paddingEnd="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        tools:listitem="@layout/item_app_notification"
        tools:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>
