<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/window_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:background="?AppColorBackground">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_view"
        android:layout_width="0dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toTopOf="@id/guide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="success.json"
        app:lottie_repeatCount="0"
        app:lottie_repeatMode="restart"
        app:lottie_speed="1" />


    <TextView
        android:id="@+id/tv_introduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:fontFamily="@font/urbanist_extrabold"
        android:maxWidth="500dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/O_echo_est_ligado"
        android:textAlignment="center"
        android:textColor="?colorSecondary"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/lottie_view" />


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_disable_echo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:drawablePadding="16dp"
        android:elevation="2dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/Desligar_echo"
        android:textSize="16sp"
        app:icon="@drawable/vec_echo_off"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:drawablePadding="16dp"
        android:elevation="2dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/Finalizar"
        android:textSize="16sp"
        app:icon="@drawable/vec_check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
